--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,5 +1,5 @@
 <div class="main-content">
-    <div class="card">
+    <div class="card" *ngIf="addProduct">
         <div class="card-header">
             <div class="row">
                 <div class="col-md-9">
@@ -12,40 +12,45 @@
                                 <div class="col-xl-6 col-lg-6 col-md-12 ">
                                     <div class="form-group mb-3">
                                         <label for="description">Description</label>
-                                        <textarea placeholder="Write about Product... " [(ngModel)]="productsModel.descripition" class="form-control validate"
+                                        <textarea placeholder="Write about Product... "
+                                            [(ngModel)]="productsModel.descripition" class="form-control validate"
                                             rows="7" required="" #descripition="ngModel"></textarea>
                                     </div>
                                     <div class="form-group mb-3">
                                         <label class="card-title">Date of Purchase</label>
                                         <div class="form-group">
-                                            <input style="position:relative;" placeholder="Choose Date" [(ngModel)]="productsModel.purchasedate" class="form-control"
-                                                name="dp" ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()"
-                                                #purchasedate="ngModel"  >
-                                                <i style="position:absolute; right:8px;top:8px;" class="fa fa-calendar "></i>
+                                            <input style="position:relative;" placeholder="Choose Date"
+                                                [(ngModel)]="productsModel.purchasedate" class="form-control" name="dp"
+                                                ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()"
+                                                #purchasedate="ngModel">
+                                            <i style="position:absolute; right:8px;top:8px;"
+                                                class="fa fa-calendar "></i>
                                             <!-- <input type="text" class="form-control datepicker" value="10/05/2018"> -->
                                         </div>
                                     </div>
                                     <div class="form-group mb-3">
                                         <label for="name">Vendor's Name
                                         </label>
-                                        <input placeholder="Enter Vendor's name" [(ngModel)]="productsModel.vendorname" id="name" name="name"
-                                            type="text" class="form-control validate" required=""
+                                        <input placeholder="Enter Vendor's name" [(ngModel)]="productsModel.vendorname"
+                                            id="name" name="name" type="text" class="form-control validate" required=""
                                             #vendorname="ngModel">
                                     </div>
                                     <div class="form-group mb-3">
                                         <label for="Phone">Vendor's Contact
                                         </label>
-                                        <input placeholder="Enter Vendor's contact" [(ngModel)]="productsModel.vendorcontact" id="Phone" name="Phone"
-                                        type="tel" maxlength="10" pattern="[6789][0-9]{9}" class="form-control validate" required=""
-                                            #vendorcontact="ngModel">
-                                            <div *ngIf="vendorcontact.errors && (vendorcontact.dirty || vendorcontact.touched)" class="alert alert-danger">
-                                                <div *ngIf="vendorcontact.errors.required">
-                                                    Vendor's Number is required
-                                                </div>
-                                                <div [hidden]="!vendorcontact.errors('pattern')">
-                                                    Enter Only Valid Numbers.
-                                                </div>
+                                        <input placeholder="Enter Vendor's contact"
+                                            [(ngModel)]="productsModel.vendorcontact" id="Phone" name="Phone" type="tel"
+                                            maxlength="10" pattern="[6789][0-9]{9}" class="form-control validate"
+                                            required="" #vendorcontact="ngModel">
+                                        <div *ngIf="vendorcontact.errors && (vendorcontact.dirty || vendorcontact.touched)"
+                                            class="alert alert-danger">
+                                            <div *ngIf="vendorcontact.errors.required">
+                                                Vendor's Number is required
                                             </div>
+                                            <div [hidden]="!vendorcontact.errors('pattern')">
+                                                Enter Only Valid Numbers.
+                                            </div>
+                                        </div>
                                     </div>
                                     <div>
                                         <h6 class="card-title">Regular Image</h6>
@@ -67,23 +72,23 @@
                                             </div>
                                         </div>
                                     </div>
-                                    
-                                    
+
+
                                 </div>
                                 <div class="col-xl-6 col-lg-6 col-md-12">
                                     <form action="" class="tm-edit-product-form">
                                         <div class="form-group mb-3">
                                             <label for="name">Product Name
                                             </label>
-                                            <input placeholder="Enter name" [(ngModel)]="productsModel.name" id="name" name="name" type="text"
-                                                class="form-control validate" required="" #name="ngModel">
+                                            <input placeholder="Enter name" [(ngModel)]="productsModel.name" id="name"
+                                                name="name" type="text" class="form-control validate" required=""
+                                                #name="ngModel">
                                         </div>
 
                                         <div class="form-group mb-3">
                                             <label for="category">Category</label>
-                                            <select 
-                                                class="custom-select tm-select-accounts" id="category"[(ngModel)]="productsModel.category"
-                                                #category="ngModel">
+                                            <select class="custom-select tm-select-accounts" id="category"
+                                                [(ngModel)]="productsModel.category" #category="ngModel">
                                                 <option selected="">Select category</option>
                                                 <option value="New Arrival">New Arrival</option>
                                                 <option value="Most Popular">Most Popular</option>
@@ -94,21 +99,21 @@
                                             <div class="form-group mb-3 col-xs-12 col-sm-6">
                                                 <label for="expire_date">Price
                                                 </label>
-                                                <input placeholder="Enter Price" [(ngModel)]="productsModel.price" id="expire_date"
-                                                    name="expire_date" type="number"
+                                                <input placeholder="Enter Price" [(ngModel)]="productsModel.price"
+                                                    id="expire_date" name="expire_date" type="number"
                                                     class="form-control validate hasDatepicker" data-large-mode="true"
                                                     #price="ngModel">
                                             </div>
                                             <div class="form-group mb-3 col-xs-12 col-sm-6">
                                                 <label for="stock">Quantity
                                                 </label>
-                                                <input placeholder="Enter Quantity" [(ngModel)]="productsModel.quantity" id="stock" name="stock"
-                                                    type="number" class="form-control validate" required=""
-                                                    #quantity="ngModel">
+                                                <input placeholder="Enter Quantity" [(ngModel)]="productsModel.quantity"
+                                                    id="stock" name="stock" type="number" class="form-control validate"
+                                                    required="" #quantity="ngModel">
                                             </div>
                                         </div>
-                                       
-                                        
+
+
                                     </form>
                                 </div>
 
@@ -136,15 +141,28 @@
         <div class="card-footer">
         </div>
     </div>
-    <div class="card">
+    <div class="card" *ngIf="showList">
         <div class="card-header">
         </div>
         <div class="card-body">
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <h4 class="card-title"> Product Table</h4>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h4 class="card-title"> Product List</h4>
+                            </div>
+                            <div class="ml-md-auto">
+                                <button type="cancel" class="btn btn-danger btn-round" routerLink="/dashboard">
+                                    <i class="fa fa-arrow-left"></i> Back
+                                </button>
+                                <button type="Add" class="btn btn-info btn-round" (click)="addcategory()">
+                                    <i class="fa fa-plus"></i> Add Category
+                                </button>
+                            </div>
+                        </div>
                     </div>
+
                     <div class="card-body">
                         <div class="table-responsive">
                             <table class="table table-striped">
@@ -171,13 +189,14 @@
                                 </thead>
                                 <tbody>
                                     <tr *ngFor="let item of products | paginate: { itemsPerPage: p, currentPage: p };">
-                                        <td class="text-center">{{ item.name }}  <br> DESCRIPITION--{{ item.descripition}}
+                                        <td class="text-center">{{ item.name }} <br> DESCRIPITION--{{
+                                            item.descripition}}
                                         </td>
-                                        <td class="text-center">{{ item.category}} </td>  
+                                        <td class="text-center">{{ item.category}} </td>
                                         <td class="text-center">{{ item.purchasedate }}</td>
                                         <td class="text-center">{{ item.quantity }}</td>
                                         <td class="text-center">{{ item.price }}</td>
-                                        <td class="text-center">{{ item.price * item.quantity }}</td>  
+                                        <td class="text-center">{{ item.price * item.quantity }}</td>
                                         <td class="text-right">
                                             <button type="button" rel="tooltip" class="btn btn-info btn-icon btn-sm">
                                                 <i class="fa fa-eye" (click)="onlyViewCustomerDetails(item.id)"></i>
@@ -230,7 +249,8 @@
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <input type="text" class="form-control" id="lname" name="lname"
-                                            [(ngModel)]="updateProductModel.descripition" placeholder=" Enter Description" />
+                                            [(ngModel)]="updateProductModel.descripition"
+                                            placeholder=" Enter Description" />
                                     </div>
                                 </div>
 
@@ -328,4 +348,116 @@
             </div>
         </div>
     </div>
+    <div class="card" *ngIf="addc">
+        <div class="card-header">
+            <div class="row">
+                <div class="col-md-9">
+                    <h4 class="card-title">Add Category</h4>
+                </div>
+                <button type="cancel" class="btn btn-danger btn-round" routerLink="/dashboard">
+                    <i class="fa fa-arrow-left"></i> Back
+                </button>
+            </div>
+            <hr>
+            <div class="card-body">
+                <form class="form-horizontal" name="servicesRegForm" #servicesRegForm="ngForm">
+                    <div class="row">
+                        <label class="col-md-2 col-form-label">Name</label>
+                        <div class="col-md-4">
+                            <input type="text" class="form-control" [(ngModel)]="categoryModel.name" 
+                            [ngModelOptions]="{standalone: true}" placeholder="Enter name" #name="ngModel">
+                        </div>
+
+
+                    </div>
+
+                </form>
+            </div>
+            <div class="card-footer">
+                
+                    <button type="submit" class="btn btn-info btn-round pull-right" style="margin-bottom:20px ;" (click)="saveCategoryDetail()">
+                        <i class="fa fa-paper-plane" aria-hidden="true"></i> Submit
+                    </button>
+            </div>
+
+        </div>
+    </div>
+    <div class="card-body" *ngIf="showCategoryList">
+        <div class="table-responsive">
+            <table class="table table-striped">
+                <thead class="text-primary">
+                    <th class="text-center">
+                        Id
+                    </th>
+                    <th class="text-center">
+                        Name
+                    </th>
+                    <th class="text-center">
+                        Date created
+                    </th>
+                    
+                    <th class="text-right">Actions</th>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let item of category | paginate: { itemsPerPage: p, currentPage: p };">
+                        
+                        <td class="text-center">{{ item.index}}</td>
+                        <td class="text-center">{{ item.name }}</td>
+                        <td class="text-center">{{ item.createddate|date }}</td>
+                        <td class="text-right">
+                           
+                            <button type="button" rel="tooltip" class="btn btn-success btn-icon btn-sm">
+                                <i class="fa fa-edit" data-toggle="modal" data-target="#CategoryModal"
+                                    (click)="viewCategoryDetails(item)"></i>
+                            </button>
+                            &nbsp;
+                            <button type="button" rel="tooltip" class="btn btn-danger btn-icon btn-sm"
+                                (click)="removeCategoryList(item.id)">
+                                <i class="fa fa-times"></i>
+                            </button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="modal fade" id="CategoryModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-notice">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    <i class="nc-icon nc-simple-remove"></i>
+                </button>
+                <h5 class="modal-title" id="myModalLabel">View/Edit Products</h5>
+            </div>
+            <div class="modal-body">
+                <div class="instruction">
+                    <form class="form-horizontal" name="employeeRegForm" #employeeRegForm="ngForm">
+                        <div class="row">
+                            <label class="col-md-2 col-form-label">Product Name</label>
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" id="fname" name="fname"
+                                        [(ngModel)]="updateProductModel.name" placeholder=" Enter Product Name " />
+                                </div>
+                            </div>
+                           
+                        </div>
+
+                    </form>
+                </div>
+            </div>
+            <div class="modal-footer justify-content-center">
+                <button type="button" class="btn btn-info btn-round" data-dismiss="modal"
+                    (click)="updateProductDetails()">
+                    <i class="fa fa-paper-plane" aria-hidden="true"></i> Update
+                </button>
+                <button type="button" class="btn btn-secondary btn-round" data-dismiss="modal">
+                    <i class="fa fa-times" aria-hidden="true"></i> Cancel
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
