--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -19,7 +19,9 @@
     </div>
     <div class="info">
       <a data-toggle="collapse" href="#collapseExample" class="collapsed">
-        <span>{{ userName }}<b class="caret"></b>
+        <span>{{ userName }} <br>
+          <span style="color:gold">(Members)</span>
+          <b class="caret"></b>
         </span>
       </a>
       <div class="clearfix"></div>
