--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -509,7 +509,7 @@
             </div>
             <div class="modal-footer justify-content-center">
                 <button type="button" class="btn btn-info btn-round" data-dismiss="modal"
-                    (click)="updateProductDetails()">
+                    (click)="UpdateProductDetails()">
                     <i class="fa fa-paper-plane" aria-hidden="true"></i> Update
                 </button>
                 <button type="button" class="btn btn-secondary btn-round" data-dismiss="modal">
