--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -95,6 +95,9 @@
                 <br />
                 <div class="form-group">
                   <a routerLink='/pages/forgotpwd' style="font-weight: 500;">Forgot Password ?</a>
+                  <a routerLink='/pages/customer-register' style="font-weight: 500; padding-left: 80px">Register
+                    here</a>
+                    <!-- <a routerLink='/pages/otp' style="font-weight: 500;">Otp</a> -->
                   <!-- <div class="form-check">
                                         <label class="form-check-label">
                                             <input class="form-check-input" type="checkbox" value="" checked="">
