--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -564,6 +564,13 @@
                                             placeholder="Enter Price" />
                                     </div>
                                 </div>
+                                <label class="col-sm-2 col-form-label">Show Products to customers</label>
+                
+                                    <label class="switch">
+                                        <input type="checkbox" checked class="switch-input"  id="vip"
+                                        name="vip" [(ngModel)]="updateProductModel.display">
+                                        <span class="slider round"></span>
+                                 </label>
                                 <!-- <label class="col-md-2 col-form-label">Pincode</label>
                                 <div class="col-md-4">
                                     <div class="form-group">
