--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -209,6 +209,32 @@
                 </div>
             </div>
         </div>
+        <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Customer'">
+    <div class="card card-stats" (click)="openCustomerService()">
+        <div class="card-body ">
+            <div class="row">
+                <div class="col-5 col-md-4">
+                    <div class="icon-big text-center icon-warning">
+                        <i class="fa fa-scissors text-primary"></i>
+                    </div>
+                </div>
+                <div class="col-7 col-md-8">
+                    <div class="numbers">
+                        <p class="card-category">Customer Service</p>
+                        <p class="card-title">Total: {{customerList.length}}
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card-footer">
+            <hr>
+            <div class="stats">
+                <i class="fa fa-arrow-right"></i> View
+            </div>
+        </div>
+    </div>
+</div>
     </div>
     <div class="row">
         <div class="col-md-6">
