--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -273,7 +273,7 @@
                         <div class="col-7 col-md-8">
                             <div class="numbers">
                                 <p class="card-category">Membership</p>
-                                <p class="card-title">Total: {{membershipList}}
+                                <p class="card-title">Total: {{membershipList.length}}
                                 </p>
                             </div>
                         </div>
