--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -463,7 +463,7 @@
                         <th class="text-right">Actions</th>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let item of products | paginate: { itemsPerPage: p, currentPage: p };">
+                        <tr *ngFor="let item of productsReg  | paginate: { itemsPerPage: 10, currentPage: p };">
 
 
                             <td>
